--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+env_logger = "0.10.0"
+log = "0.4.17"
 reqwest = { version = "0.11.4", features = ["json", "blocking"] }
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.68"
