--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chatgpt_rs = { version ="1.1.8", features = ["streams"]}
 env_logger = "0.10.0"
+futures-util = "0.3.28"
 log = "0.4.17"
 reqwest = { version = "0.11.4", features = ["json", "blocking"] }
 serde = { version = "1.0.133", features = ["derive"] }
