--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ log = "0.4.17"
 reqwest = { version = "0.11.4", features = ["json", "blocking"] }
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.68"
+structopt = "0.3.26"
 tokio = "1.28.2"
